--- a/main.html
+++ b/main.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-	<form id="form1" onsubmit="getFormvalue()">
-		First name: <input type="text" name="fname"><br>
-		Last name: <input type="text" name="lname"><br>
+	<form id="form1">
+		First name: <input type="text" name="fname" id="fname"><br>
+		Last name: <input type="text" name="lname" id="lname"><br>
 		<input type="submit" value="Submit">
 	</form>
 	
